--- a/env/config.json
+++ b/env/config.json
@@ -1,10 +1,12 @@
 {
   "chainConfig": [
     {
-      "chainId": 1,
       "endpoint": "",
       "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
-      "feeRate": 5,
+      "chainId": 1,
+      "feeRate": 10,
+      "gasTokenName": "ETH",
+      "gasTokenDecimal": 18,
       "tokenConfig": [
         {
           "tokenName": "USDT",
@@ -25,19 +27,39 @@
           "tokenName": "BUSD",
           "tokenAddress": "0x4fabb145d64652a948d72533023f6e7a623c7c53",
           "tokenDecimal": 18
+        },
+        {
+          "tokenName": "IF",
+          "tokenAddress": "0xb0e1fc65c1a741b4662b813eb787d369b8614af1",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "WETH",
+          "tokenAddress": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "CELR",
+          "tokenAddress": "0x4f9254c83eb525f9fcf346490bbb3ed28a81c667",
+          "tokenDecimal": 18
         }
       ],
       "watchConfig": {
-        "pollingInterval": 10,
-        "blockDelay": 4,
-        "maxBlockDelta": 5000
+        "pollingInterval": 15,
+        "blockDelay": 8
+      },
+      "transactorConfig": {
+        "addGasGwei": 10,
+        "addGasEstimateRatio": 0.3
       }
     },
     {
-      "chainId": 56,
       "endpoint": "",
       "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
-      "feeRate": 0,
+      "chainId": 56,
+      "feeRate": 4,
+      "gasTokenName": "BNB",
+      "gasTokenDecimal": 18,
       "tokenConfig": [
         {
           "tokenName": "USDT",
@@ -58,30 +80,304 @@
           "tokenName": "BUSD",
           "tokenAddress": "0xe9e7cea3dedca5984780bafc599bd69add087d56",
           "tokenDecimal": 18
+        },
+        {
+          "tokenName": "IF",
+          "tokenAddress": "0xb0e1fc65c1a741b4662b813eb787d369b8614af1",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "WETH",
+          "tokenAddress": "0x2170ed0880ac9a755fd29b2688956bd959f933f8",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "CELR",
+          "tokenAddress": "0x1f9f6a696c6fd109cd3956f45dc709d2b3902163",
+          "tokenDecimal": 18
         }
       ],
       "watchConfig": {
-        "pollingInterval": 3,
-        "blockDelay": 4,
+        "pollingInterval": 10,
+        "blockDelay": 8,
         "maxBlockDelta": 5000
+      },
+      "transactorConfig": {
+        "addGasGwei": 2,
+        "addGasEstimateRatio": 0.3
       }
     },
     {
-      "chainId": 42161,
       "endpoint": "",
       "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
-      "feeRate": 0,
+      "chainId": 42161,
+      "feeRate": 4,
+      "gasTokenName": "ETH",
+      "gasTokenDecimal": 18,
       "tokenConfig": [
         {
           "tokenName": "USDC",
           "tokenAddress": "0xFF970A61A04b1cA14834A43f5dE4533eBDDB5CC8",
           "tokenDecimal": 6
+        },
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0xFd086bC7CD5C481DCC9C85ebE478A1C0b69FCbb9",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "WETH",
+          "tokenAddress": "0x82aF49447D8a07e3bd95BD0d56f35241523fBab1",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "CELR",
+          "tokenAddress": "0x3a8B787f78D775AECFEEa15706D4221B40F345AB",
+          "tokenDecimal": 18
         }
       ],
       "watchConfig": {
-        "pollingInterval": 3,
-        "blockDelay": 4,
+        "pollingInterval": 10,
+        "blockDelay": 8,
+        "forwardBlockDelay": 500
+      },
+      "transactorConfig": {
+        "gasLimit": 3200000,
+        "addGasGwei": 2
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 137,
+      "feeRate": 4,
+      "gasTokenName": "MATIC",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0xc2132d05d31c914a87c6611c10748aeb04b58e8f",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "DAI",
+          "tokenAddress": "0x8f3cf7ad23cd3cadbd9735aff958023239c6a063",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0x2791bca1f2de4661ed88a30c99a7a9449aa84174",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "BUSD",
+          "tokenAddress": "0xdab529f40e671a1d4bf91361c21bf9f0c9712ab7",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "WETH",
+          "tokenAddress": "0x7ceb23fd6bc0add59e62ac25578270cff1b9f619",
+          "tokenDecimal": 18
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 15,
+        "blockDelay": 80,
+        "maxBlockDelta": 1000
+      },
+      "transactorConfig": {
+        "addGasGwei": 50,
+        "addGasEstimateRatio": 0.3
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 100,
+      "feeRate": 4,
+      "gasTokenName": "xDai",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0x4ECaBa5870353805a9F068101A40E0f32ed605C6",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0xDDAfbb505ad214D7b80b1f830fcCc89B60fb7A83",
+          "tokenDecimal": 6
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 15,
+        "blockDelay": 15
+      },
+      "transactorConfig": {
+        "addGasGwei": 2,
+        "addGasEstimateRatio": 0.3
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 43114,
+      "feeRate": 4,
+      "gasTokenName": "AVAX",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0xc7198437980c041c805A1EDcbA50c1Ce5db95118",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "DAI",
+          "tokenAddress": "0xd586E7F844cEa2F87f50152665BCbc2C279D8d70",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0xA7D7079b0FEaD91F3e65f86E8915Cb59c1a4C664",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "WETH",
+          "tokenAddress": "0x49D5c2BdFfac6CE2BFdB6640F4F80f226bc10bAB",
+          "tokenDecimal": 18
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 15,
+        "blockDelay": 15
+      },
+      "transactorConfig": {
+        "addGasGwei": 2,
+        "addGasEstimateRatio": 0.3
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 66,
+      "feeRate": 4,
+      "gasTokenName": "OKT",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0x382bb369d343125bfb2117af9c149795c6c65c50",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0xc946daf81b08146b1c7a8da2a851ddf2b3eaaf85",
+          "tokenDecimal": 18
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 15,
+        "blockDelay": 30,
+        "maxBlockDelta": 2000
+      },
+      "transactorConfig": {
+        "addGasGwei": 2,
+        "addGasEstimateRatio": 0.3
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 10,
+      "feeRate": 4,
+      "gasTokenName": "ETH",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0x94b008aa00579c1307b0ef2c499ad98a8ce58e58",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "DAI",
+          "tokenAddress": "0xda10009cbd5d07dd0cecc66161fc93d7c9000da1",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0x7f5c764cbc14f9669b88837ca1490cca17c31607",
+          "tokenDecimal": 6
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 10,
+        "blockDelay": 8,
+        "maxBlockDelta": 10000
+      },
+      "transactorConfig": {
+        "gasLimit": 50000000
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 250,
+      "feeRate": 4,
+      "gasTokenName": "FTM",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0x049d68029688eabf473097a2fc38ef61633a3c7a",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0x04068da6c83afcfa0e13ba15a6696662335d5b75",
+          "tokenDecimal": 6
+        },
+        {
+          "tokenName": "WETH",
+          "tokenAddress": "0x74b23882a30290451A17c44f4F05243b6b58C76d",
+          "tokenDecimal": 18
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 10,
+        "blockDelay": 15
+      },
+      "transactorConfig": {
+        "addGasGwei": 2,
+        "addGasEstimateRatio": 0.3
+      }
+    },
+    {
+      "endpoint": "",
+      "contractAddress": "0x841ce48F9446C8E281D3F1444cB859b4A6D0738C",
+      "chainId": 128,
+      "feeRate": 4,
+      "gasTokenName": "HT",
+      "gasTokenDecimal": 18,
+      "tokenConfig": [
+        {
+          "tokenName": "USDT",
+          "tokenAddress": "0xa71edc38d189767582c38a3145b5873052c3e47a",
+          "tokenDecimal": 18
+        },
+        {
+          "tokenName": "USDC",
+          "tokenAddress": "0x9362bbef4b8313a8aa9f0c9808b80577aa26b73b",
+          "tokenDecimal": 6
+        }
+      ],
+      "watchConfig": {
+        "pollingInterval": 15,
+        "blockDelay": 15,
         "maxBlockDelta": 5000
+      },
+      "transactorConfig": {
+        "addGasGwei": 2,
+        "addGasEstimateRatio": 0.3
       }
     }
   ],
